--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Ciau Mattia</title>
-		<script src="./main.js"></script>
-		<link rel="stylesheet" href="./style.css" />
+		<title>SaveBase</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>CIAO!</h1>
+		<h1>IL TUO ID E' {{ id }}</h1>
+	</body>
 </html>
 
