--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -10,6 +10,7 @@
 		<h1>CIAO!</h1>
 		<h1>IL TUO ID E' {{ id }}</h1>
 		<h1>MONEY: {{money}}</h1>
+		<form action="/api/add_money/5" method="post">test<input type="submit"/></form>
 	</body>
 </html>
 
